--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,40 @@
 plugins {
     id 'java-library'
-    id 'io.qameta.allure' version '2.8.1'
+    id "io.qameta.allure" version "2.9.6"
 }
 
 repositories {
     mavenCentral()
 }
 
-def allureVersion = "2.16.1",
-    selenideVersion = "5.24.2",
-    junitVersion = "5.8.1"
+def allureVersion = "2.17.3",
+    selenideVersion = "6.4.0",
+    junitVersion = "5.8.2",
+    slf4jVersion = "1.7.36"
 
 allure {
-    version = allureVersion
-    autoconfigure = true
-    aspectjweaver = true
-    configuration = "testImplementation"
-    useJUnit5 {
-        version = allureVersion
+    report {
+        version.set(allureVersion)
+    }
+    adapter {
+        aspectjVersion = "1.9.9"
+        aspectjWeaver.set(true)
+        frameworks {
+            junit5 {
+                adapterVersion.set(allureVersion)
+            }
+        }
     }
 }
 
 dependencies {
     testImplementation(
-            "org.aspectj:aspectjweaver:1.9.6",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
+            "org.junit.jupiter:junit-jupiter:$junitVersion",
             "com.github.javafaker:javafaker:1.0.2",
-            "org.junit.jupiter:junit-jupiter-api:$junitVersion")
-    testRuntimeOnly(
-            "org.slf4j:slf4j-simple:1.7.29",
-            "org.junit.jupiter:junit-jupiter-engine:$junitVersion")
+            "org.slf4j:slf4j-simple:$slf4jVersion"
+    )
 }
 
 tasks.withType(JavaCompile) {
@@ -45,5 +49,11 @@ tasks.withType(Test) {
             events "started", "skipped", "failed", "standard_error", "standard_out"
             exceptionFormat "short"
         }
+    }
+}
+
+task demoqa_tests(type: Test) {
+    useJUnitPlatform{
+        includeTags "demoqa"
     }
 }
